working on appendix b/chap5; 40% done

--- a/chap5.tex
+++ b/chap5.tex
@@ -1,10 +1,82 @@
 \chapter{New Epistemologies and Public Space}
 
+Though the histories of the road and its relationship to the
+automobile are very much part of the background of this thesis, little
+has so far been said about them. We have treated the current status
+quo as a foregone conclusion: that cars would have separate spaces on
+the roadway, and generally interact with pedestrians in a controlled
+fashion.\footnote{This is not, however, to minimize the human
+  interaction component between drivers and pedestrians at crosswalks
+  and lights. Such interactions are a critical part of navigating city
+  streets, and some interesting research work has been done building
+  machines that take them seriously. Of particular note is Nicholas
+  Pennycooke's thesis on AEVITA\cite{???-aevita}. Negotiating street
+  space with unpredictable, and difficult-to-read, human beings a
+  major stumbling block for automated vehicles.} However, there was a
+time when city streets were not primarily the venue of the automobile,
+but were mixed-use areas where children played, vendors sold goods,
+and adults walked, talked, biked, and gathered socially. The street as
+a social space predates the concept of the street as a throughway for
+motorized transportation specifically, and its changes over the past
+hundred or so years are greatly responsible for the inhumanity of the
+modern urban landscape, an inhumanity that current urban designers are
+interested in reversing. 
 
->>>This is where I weave in automotive history 
->>>Return to streetcar and the re-shaping of public space: 
+Early automobiles and streetcars shared the roads with other social
+uses. And this space sharing caused problems for the drivers and
+manufacturers of fast moving, dangerous vehicles, which all too
+frequently inflicted bodily harm on those people with which they
+shared the environment. The regimentation of public space into
+crosswalks, where pedestrians are legally protected, and other parts
+of the roadway from which pedestrians are supposed to be excluded, is
+a direct outcome of an early 20th century campaign to reduce
+pedestrian deaths. ``In the early days of the automobile, it was
+drivers' job to avoid you, not your job to avoid them,'' describes
+Peter Norton, the author of \emph{Fighting Traffic}
+\cite{???-http://www.vox.com/2015/1/15/7551873/jaywalking-history}.
+But accidents nevertheless occurred, and the victims were primarily
+children and the elderly\cite{???-vox}; and the deaths of children,
+specifically, came to have a new social meaning that made them
+particularly abhorrent\cite{???-zelizer}/ 
+After Mary Miner's death in 1903, the driver was almost beaten by a
+mob\cite[p. 22]{???-zelizer}. Accidental deaths of children were an
+alarming problem, with a significant public response:  mobs attacked
+the killers, acts of public mourning memorialized the lost, and a
+national safety campaign began to attempt to reduce these
+deaths\cite[p. 23]{???-zelizer}. Public outrage cast automobiles as
+``frivolous playthings'' or ``pleasure cars''\cite{???-vox}, magnified
+by the result in a transformation of the sentimental worth of
+children\cite[p. 23]{???-zelizer}. 
+
+This context for public space involved a potential radical change in
+the uses and meanings of the street. As Zelizer notes, the city street
+was formerly a playground for children, in part out of the necessity
+to find some space for play amid crowded tenements\cite[p.
+  33]{???-zelizer}. But children did not surrender their street games
+easily, and their ``eviction'' from the streets came about via safety
+campaigns and ``Americanization programs''---which encouraged
+immigrant children to use playgrounds, instead of streets, as their
+play spaces---catalyzed by the automotive threat\cite[p.
+  35]{???-zelizer}. 
+
+37 deaths emerged as fundamental national problem in 1920s
+--early press ``pinned most of the blame on parents''
+--modern life ``cannot be retarded to enable heedless children to get
+out of the way''
+38 street games turned to criminal offenses (1914 ish)
+--police arrested many children, but fatalities kept increasing
+
+lochlann-jain
+13 Mothers had been charged to keep their children out of ``what had
+been their play areas'' to keep the roads clear from automobiles
+--safety crusaders blamed MOTHERS
+--criminalization of children's street games
+--homogenize the road for ``transit''
+
+Cars were not even fully responsible for the creation of paved roads;
+bicycles start road paving, create the very roads they must then
+compete with cars for space on
 http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history
-http://www.vox.com/2015/1/15/7551873/jaywalking-history
 
 
 1) process by which new technologies become entwined with new legal
@@ -14,16 +86,22 @@ principles; new epistemologies?
 this in the everyday (because we haven't seen them outside of extreme
 environments, except in very weak forms)
 
+10 Dangerous Instrumentalities
+---court states that ``Until human agency intervenes, they are usually
+harmless''
+>>> explicitly human agency here: what do we do about MACHINE AGENCY
+>>>DOES THE CAR BECOME A DANGEROUS INSTRUMENTALITY WHEN IT CAN OPERATE ITSELF??!
+
+
 -the street stands to be re-shaped again, subtly, by the capabilities
 of our vehicles (1 p)
 --and an understanding (or not) of our own hybridity
 
-hybrids at many levels:
+new epistemologies may be necessary at many levels:
 --personal: in terms of human role and our understanding of our own role
-----referring back to HF/SC (3 p)
---system: in terms of how the road itself may have to change (not going to
-spend a lot of time on this, but it is worth at least a couple
-paragraphs) (2 p)
+----referring back to HF/SC
+--system: in terms of how the road itself may have to change
+-----if we want to make more human(e) cities
 --legal: in terms of legal framework
 ----it is important to note that ``responsibility'' is not binary
 (which is made clear in these examples), and torts may be distributed
@@ -39,3 +117,20 @@ for? (3 p)
 Sidenote: important to note that issues of litigation for full autonomy are
 not even part of the debate yet, we just aren't at the stage where it
 is worth discussing
+
+``Anyone who focuses solely on the technology has not yet grasped how
+autonomous driving will change our society,'' says Dr Dieter Zetsche,
+chairman of Daimler AG
+\cite{???-http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/}
+As I have described, these vehicles sit in a much broader network of
+social relationships. The city and the street have changed before, and
+will change again, to accomodate new technologies, assuming sufficient
+social and economic pressure to catalyze that change. Technologies do
+not alone bring about those changes, but their presence, availability,
+and market viability provide incentives for groups to encourage broad
+social and infrastructural changes. The automated vehicle represents a
+another possible nexus for change, but how the city will be re-shaped
+is an open question. As I held in chapter \ref{chap:2}, however, that
+change should not be arbitrary, at the whims of a certain set of
+producers and organizations, but part of a large-scale system design
+strategy to address the needs of all transportation users.
