second appendix draft completed

--- a/chap5.tex
+++ b/chap5.tex
@@ -57,71 +57,143 @@ easily, and their ``eviction'' from the streets came about via safety
 campaigns and ``Americanization programs''---which encouraged
 immigrant children to use playgrounds, instead of streets, as their
 play spaces---catalyzed by the automotive threat\cite[p.
-  35]{???-zelizer}. 
+  35]{???-zelizer}. But the deaths of children at the hands of
+automobiles were not solely placed on the shoulders of drivers. As the
+death rate became a national crisis, the
+early press ``pinned most of the blame on parents'': modern life, it
+was said, ``cannot be retarded to enable heedless children to get out
+of the way'' \cite[p. 37]{???-zelizer}. Street games were turned into
+criminal offenses by around 1914, and the police arrested many
+children, but fatalities kept increasing nonetheless\cite[p.
+  38]{???-zelizer}. Families were called upon to take a greater role
+in protecting children from the perils of the street; mothers were
+charged with keeping their children out of ``what had been their play
+areas'' in order to keep the roads clear for automobiles, and safety
+crusaders tended to blame mothers for the deaths of their own
+children\cite[p. 13]{???-lochlannjain}. The homogenization of the road
+for ``transit'' \cite[p. 13]{???_lochlannjain} involved not only
+family pressures but a concerted legal and public relations campaign. Automakers
+and dealers, concerned by public pressure for speed governors on
+automobiles, pushed for stricter pedestrian controls across the country, and
+auto industry groups exerted significant pressure on the creation of
+the 1928 Model Municipal Traffic Ordinance in order to build a law
+that was friendly to automobiles\cite{???-vox}. To attempt to
+compensate for laws that were rarely followed and enforced,
+auto-friendly groups worked to change the public dialogue. Articles
+ghostwritten by the National Automobile Chamber of Commerce shifted
+the blame for traffic accidents to pedestrians; the AAA sponsored
+safety campaigns in schools; and police and citizens were called upon
+to shame transgressors in order to set new public standards---even the
+name for the infraction, ``jay-walking,'' was intended to create
+public approbrium for the supposed ``hicks'' who did not know how to
+behave in cities, and to shift blame to them \cite{???-vox}. This
+change in the way streets were utilized entailed a large societal
+shift motivated by a new technology, but it would be wrong to say it
+was caused by the automobile. Instead, automobility was an enabling
+force, which provided auto companies and their supporters the impetus
+to shift public standards in a particular direction, and to shape the
+street to their own advantage.
 
-37 deaths emerged as fundamental national problem in 1920s
---early press ``pinned most of the blame on parents''
---modern life ``cannot be retarded to enable heedless children to get
-out of the way''
-38 street games turned to criminal offenses (1914 ish)
---police arrested many children, but fatalities kept increasing
+Cars were not, however, the only technological device responsible for
+the beginning of the street as we know it.
+Automobiles were not fundamentally a prerequisite for the creation of the paved
+roads that later helped them flourish. Instead, the bicycle marks the
+beginning of the ``good roads'' movement, and the push for ubiquitous
+road
+paving\cite{???-http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history}.
+Bicycles and the social groups that championed their use--aided by
+asphalt manufacturers and other special interests who saw money to be made---created the
+very roads that bicycles then had to compete with cars for space on
+\cite{???-vox2}. Many of the primary riders who had succeeded in lobbying for
+the 1916 Federal Aid Road Act, however, switched over to pioneer the
+automobile as its popularity rose in the earth 20th century. Between
+the technologies of bicycle and automobile, the American roadway
+underwent a period of radical change that crystallized the system into
+something relatively close to its current form. These historical
+examples provide some insight into the process by which new
+transportation technologies become entwined with new social standards
+and legal principles. Technological epistemologies are deeply involved
+in this process: What is a road for? What is a vehicle's
+proper role? We know that a road is intended for driving precisely
+because we have been taught according to a social code that was
+designed to foster automobility.
 
-lochlann-jain
-13 Mothers had been charged to keep their children out of ``what had
-been their play areas'' to keep the roads clear from automobiles
---safety crusaders blamed MOTHERS
---criminalization of children's street games
---homogenize the road for ``transit''
+What is the new epistemology needed to make sense of devices like
+automated vehicles in their every-day existence? We are so far not
+used to encountering such devices outside of extreme environments,
+except in weak forms like cruise control and automated transmissions.
+Automobiles were long subject to disputes over their nature: were they
+fundamentally safe vehicles misused by people, or fundamentally
+dangerous technologies that required careful licensing and use to
+make safe? In one such battle over cars as ``dangerous
+instrumentalities,'' a court held that ``Until human agency intervenes, they are usually
+harmless''\cite[p. 10]{???-lochlannjain}. Such legal statements
+explicitly involve human agency, but machine agency presents the
+possibility that such claims could be obsolesced. Are our intuitions
+affected when and if automated vehicles can be said to ``operate
+themselves'' for some periods of time, nonwithstanding the centrality
+of human supervision to operations over the long term?
+And what new re-shapings of public space will happen as part of the 
+popularization of these technologies? Will these vehicles increase the
+segregation of the road space, and require new lanes that are even
+more insulated from pedestrians? Or will faster reaction times and
+always-attentive automated safety features foster tighter, mixed-use
+environments? (And additionally, as the concept of replacing traffic
+lights with a slots system, as described by Paolo Santi, should have
+as asking, which types and classes of users will the new environments
+and standards benefit? Will environments improve for those with access
+to technology, while being degraded for those without?) 
 
-Cars were not even fully responsible for the creation of paved roads;
-bicycles start road paving, create the very roads they must then
-compete with cars for space on
-http://www.vox.com/2015/3/19/8253035/roads-cyclists-cars-history
+How we ask and answer such questions depends on our understanding (or
+not) of our own hybridity with technology. New epistemologies may be
+necessary at multiple levels. At the level of the individual, what is
+the role or status of the human, and that of the machine? How do we
+classify, and make sense of, users and devices, and their
+relationships of supervision and co-operation? At the level of the
+system, what new understandings of the role and purpose of the road
+itself are needed if we want to make use of automated technologies to
+make cities more humane? At the legal level, what is the status of a
+vehicle acting autonomously on a certain time scale? And how can
+responsibility be apportioned between supervisors and the supervised?
+It is important to note that ``responsibility'' is not binary, nor
+should it be an all-or-nothing prospect. Legal scholars note that
+torts may already be distributed across human and nonhuman actors
+(operator, owner, seller, manufacturer, distributors) in legal
+rulings, but distribution of torts has an ethical
+and ideological stance\cite{???-suemycar,etc}. The distribution of
+torts may vary from situation to situation, given the capacities of
+the vehicle and the driver\cite{???-disableddriverexample}, but we
+should not presume that all the financial responsibility must rest on
+one actor alone.\footnote{There are, however, problems with the using
+  the current liability framework to deal with blame and
+  responsibility in highly-automated systems. It is expensive for the
+litigant to get expert witnesses to testify as to the apportionment of
+responsibility between human and machine, and the human tends to be
+scapegoated all too often in industrial accidents involving human
+supervisors interacting with automation.} 
+The question of what can we actually ask the human to do, and hold them to task
+for, is a critical question both for automation system design and the
+legal handling of cases involving such automation.
+%% Sidenote: important to note that issues of litigation for full autonomy are
+%% not even part of the debate yet, we just aren't at the stage where it
+%% is worth discussing
 
-
-1) process by which new technologies become entwined with new legal
-principles; new epistemologies?
--historical example (3 p)
--what is the new epistemology needed to make sense of devices like
-this in the everyday (because we haven't seen them outside of extreme
-environments, except in very weak forms)
-
-10 Dangerous Instrumentalities
----court states that ``Until human agency intervenes, they are usually
-harmless''
->>> explicitly human agency here: what do we do about MACHINE AGENCY
->>>DOES THE CAR BECOME A DANGEROUS INSTRUMENTALITY WHEN IT CAN OPERATE ITSELF??!
-
-
--the street stands to be re-shaped again, subtly, by the capabilities
-of our vehicles (1 p)
---and an understanding (or not) of our own hybridity
-
-new epistemologies may be necessary at many levels:
---personal: in terms of human role and our understanding of our own role
-----referring back to HF/SC
---system: in terms of how the road itself may have to change
------if we want to make more human(e) cities
---legal: in terms of legal framework
-----it is important to note that ``responsibility'' is not binary
-(which is made clear in these examples), and torts may be distributed
-across human and nonhuman actors (operator, owner, seller,
-manufacturer, distributors) but distribution of torts has an ethical
-and ideological stance (2 p)
->>>>sidenote: problems with the liability framework: expensive for the
-litigant to get expert witnesses; harder to determine whose fault it
-is and the human tends to get scapegoated (see industrial accidents,
-TMI, or oil rig disasters)
->>>>>What can we actually ask the human to do and hold them to task
-for? (3 p)
-Sidenote: important to note that issues of litigation for full autonomy are
-not even part of the debate yet, we just aren't at the stage where it
-is worth discussing
-
-``Anyone who focuses solely on the technology has not yet grasped how
-autonomous driving will change our society,'' says Dr Dieter Zetsche,
-chairman of Daimler AG
-\cite{???-http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/}
+And questions of the appropriate role of the human being involve not
+only the supervisor, within the vehicle or in a remote data center,
+but other users in the environment. If streets must be re-made in
+order to make certain technological configurations viable, is that
+re-making something the public is willing to accept? And who will
+benefit from it? As Dieter Zetsche, chairman of Daimler AG describes,
+``anyone who focuses solely on the technology has not yet grasped how 
+autonomous driving will change our
+society''\cite{???-http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/}.
+But as we have found in the past, changes that favor the users or
+manufacturers of automated vehicles may not favor other users of city
+spaces, who may find their freedoms foreclosed upon. This history of
+the re-making of the city and street, for the bicycle and the
+automobile, is part of why I hold that vehicle automation is not an
+independent factor to be maximized, but a variable that is firmly
+intertwined with the design of the whole transport system.
 As I have described, these vehicles sit in a much broader network of
 social relationships. The city and the street have changed before, and
 will change again, to accomodate new technologies, assuming sufficient
