more work on conclusion, close to done

--- a/chap4.tex
+++ b/chap4.tex
@@ -66,7 +66,7 @@ repeat Western binaries and cultural subjugation\cite[p.
   118-121]{???-haraway}. But while one can hardly mention cyborgs without
 mentioning Haraway, her's is no the vision I find most relevant for
 understanding automated vehicles. Instead, I would like to consider philosopher Andy
-Clark's contention that humans are ``(disguised) _natural-born_
+Clark's contention that humans are ``(disguised) \emph{natural-born}
 cyborgs''\cite[p. 66]{ekbia}. This idea is particularly compelling
 because it need make no distinction between the analog and the
 digital, the material and the virtual. It is not an artifact of the
